--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-stack",
   "version": "1.0.0",
-  "description": "",
+  "description": "CRUD API",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
